# rl

./: pyproject.toml
ActorCriticMethods/: ddpg.ipynb
DynamicProgramming/: generalized_policy_iteration.ipynb
ModelBasedRL/: DynaQ.ipynb
MonteCarloMethods/: vanilla_monte_carlo.ipynb
TDLearning/: q_learning.ipynb  sarsa.ipynb
ValueBasedMethods/: DQN.ipynb  scratchpad.ipynb
